# tile_wm

./: .gitignore  README.md  README_ja.md  index.html  menu.html  package-lock.json  package.json  specification.md  vite.config.ts
src/: main.js  menu.css  menu.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tile_wm.code-workspace
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_bar.rs  commands.rs  config.rs  desktop.rs  hotkey.rs  lib.rs  main.rs  tiling.rs  win_event.rs
