[package]
name = "tile_wm"
version = "0.1.0"
edition = "2021"

[lib]
name = "tile_wm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell_Common",
    "Win32_System_Registry",
] }
log = "0.4"
open = "5"
